--- a/6-centos65/Vagrantfile
+++ b/6-centos65/Vagrantfile
@@ -18,14 +18,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.ssh.forward_agent = true
   config.ssh.default.username = "produser"
 
-  # 'setup' script is run in vm after bootstrap as root
-  config.vm.provision :shell, :path => "../bootstrap.sh"
+  # Provision the newly-created VM.
+  config.vm.provision "bootstrap", type: :shell, path: "../bootstrap.sh", args: [ config.vm.box ]
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
   config.vm.network "private_network", ip: "192.168.56.201"
 
-  # increase virtual box memory
+  # Customize the VM instance.
   config.vm.provider "virtualbox" do |vb|
     # Use VBoxManage to customize the VM. For example to change memory:
     vb.customize ["modifyvm", :id, "--memory", "512"]
