--- a/7-centos75/Vagrantfile
+++ b/7-centos75/Vagrantfile
@@ -13,8 +13,15 @@ Vagrant.configure(2) do |config|
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "chef/centos-7.0"
 
-  # Local provisioning.
-  config.vm.provision :shell, path: "bootstrap.sh"
+  # Provision the newly-created VM.
+  config.vm.provision "bootstrap", type: :shell, path: "../bootstrap.sh", args: [ config.vm.box ]
+
+  # Customize the VM instance.
+  config.vm.provider "virtualbox" do |vb|
+    vb.customize ["modifyvm", :id, "--memory", "512"]
+#    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+  end
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -46,6 +53,7 @@ Vagrant.configure(2) do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
+  config.vm.synced_folder "../setup", "/vagrant-setup"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
