Enable VirtualBox natdnsproxy in addition to natdnshostresolver.
The natdnsproxy setting does seem to make a difference in the client DNS
resolution when a Mac host is connected to the OpenX network over the
VPN, even when naddnshostresolver is already enabled.

--- a/6-centos65/Vagrantfile
+++ b/6-centos65/Vagrantfile
@@ -29,8 +29,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provider "virtualbox" do |vb|
     # Use VBoxManage to customize the VM. For example to change memory:
     vb.customize ["modifyvm", :id, "--memory", "512"]
-#    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+
+    # Enable the VirtualBoxVM console:
+    # vb.gui = true
   end
 
   # Disable automatic box update checking. If you disable this, then
