--- a/7-centos75/Vagrantfile
+++ b/7-centos75/Vagrantfile
@@ -19,8 +19,11 @@ Vagrant.configure(2) do |config|
   # Customize the VM instance.
   config.vm.provider "virtualbox" do |vb|
     vb.customize ["modifyvm", :id, "--memory", "512"]
-#    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+
+    # Enable the VirtualBoxVM console:
+    # vb.gui = true
   end
 
   # Disable automatic box update checking. If you disable this, then
