--- a/setup/config
+++ b/setup/config
@@ -1,6 +1,6 @@
 # Sourced by bootstrap.sh
 USERNAME=david.hull
 USER_FULLNAME="David Hull"
-USER_EMAIL="$USERNAME@openx.org"
+USER_EMAIL="$USERNAME@openx.com"
 # Extra arguments for useradd.  Set fullname, shell, etc.
 USERADD_EXTRA=(--comment="$USER_FULLNAME" --shell=/bin/bash)
