--- a/7-centos75/Vagrantfile
+++ b/7-centos75/Vagrantfile
@@ -11,14 +11,14 @@ Vagrant.configure(2) do |config|
   # vagrantup.com
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "chef/centos-7.0"
+  config.vm.box = "bento/centos-7.2"
 
   # Provision the newly-created VM.
   config.vm.provision "bootstrap", type: :shell, path: "../bootstrap.sh", args: [ config.vm.box ]
 
   # Customize the VM instance.
   config.vm.provider "virtualbox" do |vb|
-    vb.customize ["modifyvm", :id, "--memory", "512"]
+    vb.customize ["modifyvm", :id, "--memory", "1024"]
     vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
 
@@ -50,6 +50,12 @@ Vagrant.configure(2) do |config|
   # If true, then any SSH connections made will enable agent forwarding.
   # Default value: false
   # config.ssh.forward_agent = true
+
+  # This somehow works around a problem that Vagrant 1.8.5 has with
+  # trying to replace an insecure public key with a secure one.
+  # https://github.com/mitchellh/vagrant/issues/5186
+  config.ssh.username = "vagrant"
+  config.ssh.password = "vagrant"
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
