--- a/7-centos75/Vagrantfile
+++ b/7-centos75/Vagrantfile
@@ -18,9 +18,10 @@ Vagrant.configure(2) do |config|
 
   # Customize the VM instance.
   config.vm.provider "virtualbox" do |vb|
-    vb.customize ["modifyvm", :id, "--memory", "1024"]
+    vb.customize ["modifyvm", :id, "--memory", "2048"]
     vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    vb.customize ["modifyvm", :id, "--cpus", "2"]
 
     # Enable the VirtualBoxVM console:
     # vb.gui = true
