--- a/7-centos75/Vagrantfile
+++ b/7-centos75/Vagrantfile
@@ -11,10 +11,14 @@ Vagrant.configure(2) do |config|
   # vagrantup.com
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "bento/centos-7.2"
+  config.vm.box = "bento/centos-7.4"
 
   # Provision the newly-created VM.
   config.vm.provision "bootstrap", type: :shell, path: "../bootstrap.sh", args: [ config.vm.box ]
+
+  # Create a private network, which allows host-only access to the machine
+  # using a specific IP.
+  config.vm.network "private_network", ip: "192.168.56.200"
 
   # Customize the VM instance.
   config.vm.provider "virtualbox" do |vb|
@@ -55,8 +59,9 @@ Vagrant.configure(2) do |config|
   # This somehow works around a problem that Vagrant 1.8.5 has with
   # trying to replace an insecure public key with a secure one.
   # https://github.com/mitchellh/vagrant/issues/5186
-  config.ssh.username = "vagrant"
-  config.ssh.password = "vagrant"
+#  config.ssh.username = "vagrant"
+#  config.ssh.password = "vagrant"
+#  config.ssh.insert_key = false
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
